DuPont DevSB/src/objects/ccrz__E_Promo__c.object
<CustomObject>
    <description>The E_Promotion__c object contains promotion related data.</description>
    <fields>
        <fullName>ccrz__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When set AND Link Type is set to Category then clicking this promotion will redirect to the referenced CC Category.</description>
        <label>Category</label>
        <referenceTo>ccrz__E_Category__c</referenceTo>
        <relationshipLabel>CC Promotions</relationshipLabel>
        <relationshipName>CC_Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Coupon__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NOT CURRENTLY USED.</description>
        <label>Coupon</label>
        <referenceTo>ccrz__E_Coupon__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>True if this promotion is enabled and will be displayed.</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__EndDate__c</fullName>
        <defaultValue>DATEVALUE(&apos;2099-12-31&apos;)</defaultValue>
        <description>After this date the promotion will no longer be displayed.</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__ExternalLink__c</fullName>
        <description>When set AND Link Type is set to URL then clicking this promotion will redirect to the given URL.</description>
        <label>External Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ccrz__Graphic_Type__c</fullName>
        <description>One of image, slider, or swf. NOT CURRENTLY USED.</description>
        <label>Graphic Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>image</fullName>
                    <default>true</default>
                    <label>image</label>
                </value>
                <value>
                    <fullName>slider</fullName>
                </value>
                <value>
                    <fullName>swf</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__ImageSource__c</fullName>
        <description>One of Attachment, URI, Static Resource, Override Static Resource, Splash Static Resource, Splash Override Static Resource. Only Attachment, URI, and Static Resource are currently used. The ImageSource__c field indicates where to find the location of the image to be displayed for the promotion. If Attachment then the image is stored as an attachment to the object. If URI then use the ImageURI__c field. If StaticResource then use the ImageURI__c field but within the indicated Static Resource using the StaticResource__c field.</description>
        <label>Image Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attachment</fullName>
                    <default>true</default>
                    <label>Attachment</label>
                </value>
                <value>
                    <fullName>URI</fullName>
                </value>
                <value>
                    <fullName>Static Resource</fullName>
                </value>
                <value>
                    <fullName>Override Static Resource</fullName>
                </value>
                <value>
                    <fullName>Splash Static Resources</fullName>
                </value>
                <value>
                    <fullName>Splash Override Static Resource</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__ImageURI__c</fullName>
        <description>The URI of the image. If ImageSource__c is URI then this is the href pointing to the image. If ImageSource__c is Static Resource then this is a relative reference inside the indicated Static Resource.</description>
        <label>Image URI</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__LinkType__c</fullName>
        <description>One of None, Category, Product, or URL. Category is not currently supported.</description>
        <label>Link Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Category</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__LocationType__c</fullName>
        <description>One of Banner, Left Nav, Right Nav, Splash, Splash Phone, or Mobile. Controls the location within a page of the promotion.</description>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Banner</fullName>
                </value>
                <value>
                    <fullName>Left Nav</fullName>
                </value>
                <value>
                    <fullName>Right Nav</fullName>
                </value>
                <value>
                    <fullName>Splash</fullName>
                </value>
                <value>
                    <fullName>Splash Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__LongDesc__c</fullName>
        <description>Long Description(NOT CURRENTLY USED.)</description>
        <label>Long Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__NewWindowProperty__c</fullName>
        <description>NOT CURRENTLY USED.</description>
        <label>New Window Property</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__NewWindow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Open link in a new window if checked. Otherwise, open in the same window.</description>
        <label>New Window</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__PageLocation__c</fullName>
        <description>One of Landing Page, Product Detail, Shopping Cart, Order Review, Order Confirmation, Product List Page, Category Landing Page, All Pages. Indicates on which page the promotion should appear.</description>
        <label>Page Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Landing Page</fullName>
                </value>
                <value>
                    <fullName>Product Detail</fullName>
                </value>
                <value>
                    <fullName>Shopping Cart</fullName>
                </value>
                <value>
                    <fullName>Order Review</fullName>
                </value>
                <value>
                    <fullName>Order Confirmation</fullName>
                </value>
                <value>
                    <fullName>Product List Page</fullName>
                </value>
                <value>
                    <fullName>Category Landing Page</fullName>
                </value>
                <value>
                    <fullName>All Pages</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__ProductRelated__c</fullName>
        <formula>IF( ccrz__Product__c  != null, &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Related</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References a CC Product such that if the LinkType__c field is Product then clicking the promotion will link to that product.</description>
        <label>Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__PromoId__c</fullName>
        <description>External Id for E_Promo__c used in data export/import</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id for E_Promo__c used in data export/import</inlineHelpText>
        <label>Promotion Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Script__c</fullName>
        <description>HTML Script(NOT CURRENTLY USED)</description>
        <label>Script</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <description>Display order of the promotion within a group of promotions.</description>
        <label>Location Display Sequence</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__ShortDesc__c</fullName>
        <description>Short Description(NOT CURRENTLY USED)</description>
        <label>Short Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__SplashRotate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Splash Rotate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date before which the promotion will not be displayed.</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__StaticResource__c</fullName>
        <description>The name of the Static Resource that the image is kept within if ImageSource__c is Static Resource.</description>
        <inlineHelpText>1. Use prefix &quot;c__&quot; for static resource defined in subscriber org
2. StaticResource without prefix refers to static resource inside managed package</inlineHelpText>
        <label>StaticResource</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__StorefrontMS__c</fullName>
        <description>The Storefront(s) that the image will be displayed on.</description>
        <label>Storefront</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DefaultStore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <description>NOT CURRENTLY USED</description>
        <label>Storefront</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__True__c</fullName>
        <description>True - This field is used internally within the product.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>True</label>
        <type>Checkbox</type>
    </fields>
    <label>CC Promotion</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>NAME</columns>
        <columns>ccrz__Product__c</columns>
        <columns>ccrz__StaticResource__c</columns>
        <columns>ccrz__PageLocation__c</columns>
        <columns>ccrz__ImageSource__c</columns>
        <columns>ccrz__LocationType__c</columns>
        <columns>ccrz__Enabled__c</columns>
        <columns>ccrz__Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ccrz__CloudBurst</fullName>
        <columns>NAME</columns>
        <columns>ccrz__PageLocation__c</columns>
        <columns>ccrz__LocationType__c</columns>
        <columns>ccrz__Sequence__c</columns>
        <columns>ccrz__StaticResource__c</columns>
        <columns>ccrz__Enabled__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>CloudBurst</value>
        </filters>
        <label>CloudBurst</label>
    </listViews>
    <listViews>
        <fullName>ccrz__Landing_Page</fullName>
        <columns>NAME</columns>
        <columns>ccrz__LocationType__c</columns>
        <columns>ccrz__ImageSource__c</columns>
        <columns>ccrz__StaticResource__c</columns>
        <columns>ccrz__ImageURI__c</columns>
        <columns>ccrz__Enabled__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ccrz__PageLocation__c</field>
            <operation>equals</operation>
            <value>Landing Page</value>
        </filters>
        <label>Landing Page</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Promotions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>